--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <header>
       <div>
         <h1>StyleSet — Photo-based Style Recommender</h1>
-        <div class="tag">No installs • Works on GitHub Pages • Optional API integration</div>
+        <div class="tag">No  Optional API integration</div>
       </div>
       <button id="resetBtn" class="secondary" title="Clear inputs">Reset</button>
     </header>
@@ -119,7 +119,7 @@
 
         <div class="row" style="margin-top:10px;">
           <select id="mode" class="input" title="Choose how to analyze">
-            <option value="api">Use API (if configured)</option>
+            <option value="api">Use API (https://styleset.premsaiaravind7.workers.dev/)</option>
             <option value="local">Local Analyzer (no API)</option>
             <option value="auto" selected>Auto: API then Local fallback</option>
           </select>
